syntax = "proto3";

package proto;

message UserModel{
    int32 userid = 1;
    string username = 2;
    string password = 3;
    int32 email = 4;
}

message RegisterRequest{
    UserModel user = 1;
}

message RegisterResponse{
    bool keyRegister = 1;
}


// Request data to read todo task
message GetUserRequest{

    // Unique integer identifier of the todo task
    string id = 1;
}

// Contains todo task data specified in by ID request
message GetUserResponse{

    // Task entity read by ID
    UserModel User = 1;
}

// Request data to update todo task
message UpdateUserRequest{

    // Task entity to update
    UserModel User = 1;
}

// Contains status of update operation
message UpdateUserResponse{

    // Contains number of entities have beed updated
     string messageUdated = 1;
}

// Request data to delete todo task
message DeleteUserRequest{
    // Unique integer identifier of the todo task to delete
    int32 userid = 1;
}

// Contains status of delete operation
message DeleteUserResponse{

    // Contains number of entities have beed deleted
    // Equals 1 in case of succesfull delete
    string messageDeleted = 1;
}

// Request data to read all todo task
message GetAllUserRequest{
}

// Contains list of all todo tasks
message GetAllUserResponse{

    // List of all todo tasks
    repeated UserModel Users = 1;
}

// Service to manage list of todo tasks
service UserModelService {
    // Create new todo task
    rpc Create(RegisterRequest) returns (RegisterResponse);
    // Read todo task
    rpc Read(GetUserRequest) returns (GetUserResponse);
    // Update todo task;
    rpc Update(UpdateUserRequest) returns (UpdateUserResponse);
    // Delete todo task
    rpc Delete(DeleteUserRequest) returns (DeleteUserResponse);
    // Read all todo tasks
    rpc ReadAll(GetAllUserRequest) returns (GetAllUserResponse);
}
